--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,3 +31,8 @@ jobs:
           publish_dir: ./dist  # Adjust to your build output directory
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Save state
+        run: echo "{name}={value}" >> $GITHUB_STATE
+      
+      - name: Set output
+        run: echo "{name}={value}" >> $GITHUB_OUTPUT
