--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,7 +30,7 @@ jobs:
           publish_branch: gh-pages  # This is the branch GitHub Pages will use
           publish_dir: ./dist  # Adjust to your build output directory
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.TOKEN }}
       - name: Save state
         run: echo "{name}={value}" >> $GITHUB_STATE
       
