--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'  # Set to Node.js version 18
+          node-version: '16.x'  # Set to Node.js version 18
 
       - name: Install dependencies
         run: npm install
