--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,11 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.2.0
         with:
           branch: gh-pages  # The branch where the built files will be deployed
-          folder: dist       # The folder containing the built files
+          folder: ./dist       # The folder containing the built files
         env:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Save state
+        run: echo "{name}={value}" >> $GITHUB_STATE
+      - name: Set output
+        run: echo "{name}={value}" >> $GITHUB_OUTPUT
